--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/markdownit": "^1.2.9",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "@nuxtjs/sitemap": "^2.2.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
