依存をいくつか更新

--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/google-analytics": "^2.2.3",
-    "@nuxtjs/markdownit": "^1.2.9",
-    "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "@nuxtjs/markdownit": "^2.0.0",
+    "@nuxtjs/pwa": "^3.3.4",
     "@nuxtjs/sitemap": "^2.2.1",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.14.12"
   },
   "devDependencies": {
-    "contentful": "^7.14.0",
+    "contentful": "^8.1.7",
     "node-sass": "^4.13.1",
     "reset-css": "^5.0.1",
     "sass-loader": "^8.0.2"
